# usbturret

./: CMakeLists.txt  README.md
Arduino/: Makefile  main.c
Software/include/: serialcom.h  turret.h
Software/src/: main.c  serialcom.c  turret.c
include/: serialcom.h  turret.h
src/: main.c  serialcom.c  turret.c
